# Saildrone

./: .pre-commit-config.yaml  README.md
.docker/: jazzy.amd64.dockerfile  jazzy.arm64v8.desktop.dockerfile  jazzy.arm64v8.dockerfile  jazzy.arm64v8.rdp.dockerfile
.github/workflows/: docker-amd64.yml  docker-arm64v8.yml  jazzy-source-build.yml
dave_interfaces/: CMakeLists.txt  package.xml
examples/dave_demos/launch/: dave_sensor.launch.py
extras/: ardurover-ubuntu-install-local.sh  ardurover-ubuntu-install.sh  ros-jazzy-binary-gz-harmonic-source-install.sh  ros-jazzy-gz-harmonic-binary-install.sh  ros-jazzy-gz-harmonic-install.sh
extras/repos/: saildrone.jazzy.repos
gazebo/dave_gz_model_plugins/: CMakeLists.txt
gazebo/dave_gz_model_plugins/include/dave_gz_model_plugins/: OceanCurrentModelPlugin.hh
gazebo/dave_gz_model_plugins/src/: OceanCurrentModelPlugin.cc
gazebo/dave_gz_multibeam_sonar/: README.md
gazebo/dave_gz_multibeam_sonar/multibeam_sonar/: CMakeLists.txt  MultibeamSonar.cc  MultibeamSonar.hh  MultibeamSonarSensor.cc  MultibeamSonarSensor.hh  package.xml  sonar_calculation_cuda.cu  sonar_calculation_cuda.cuh
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/: CMakeLists.txt
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/launch/: multibeam_sonar_demo.launch.py
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/rviz/: multibeam_sonar.rviz
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/scripts/: plotdata.py
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_system/: CMakeLists.txt
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_system_plugin/: MultibeamSonarSystemPlugin.cc  MultibeamSonarSystemPlugin.hh
gazebo/dave_gz_sensor_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gz_sensor_plugins/include/dave_gz_sensor_plugins/: MultibeamSonar.hh  MultibeamSonarSystem.hh  depth_camera.hh
gazebo/dave_gz_sensor_plugins/src/: MultibeamSonar.cc  MultibeamSonarSystem.cc  PointCloudUtil.cc  PointCloudUtil.hh  depth_camera.cc
gazebo/dave_gz_world_plugins/: CMakeLists.txt
gazebo/dave_gz_world_plugins/ocean-waves/: CMakeLists.txt  README.md
gazebo/dave_gz_world_plugins/ocean-waves/cmake/: URL.conf.cmake
gazebo/dave_gz_world_plugins/src/: OceanCurrentWorldPlugin.cc
gazebo/dave_ros_gz_plugins/: CMakeLists.txt  package.xml
gazebo/dave_ros_gz_plugins/src/: OceanCurrentPlugin.cc
install/: _local_setup_util_ps1.py  _local_setup_util_sh.py
models/dave_object_models/hooks/: dave_object_models.dsv.in
models/dave_robot_models/hooks/: dave_robot_models.dsv.in
models/dave_robot_models/launch/: upload_robot.launch.py
models/dave_sensor_models/launch/: upload_sensor.launch.py
models/dave_world_models/: CMakeLists.txt  package.xml
models/dave_world_models/mumbles_head/: model.config
models/dave_world_models/ocean_waves/: model.config  model.sdf
models/dave_world_models/regular_waves/: model.config  model.sdf
models/dave_world_models/trochoid_waves/: model.config  model.sdf
models/dave_world_models/waves/: model.config  model.sdf
models/dave_world_models/waves_high/: model.config  model.sdf
models/dave_worlds/: package.xml
models/dave_worlds/hooks/: dave_worlds.dsv.in
models/dave_worlds/worlds/: dave_multibeam_sonar.world  dave_ocean_waves.world  dave_ocean_waves_sonar.world  dave_ocean_waves_wind_hydrodynamics.world  dvl_world.world  multibeam_sonar_tutorial.world  ocean_current_plugin.world  ocp.world  waves.world
(+181 files in other folders)
